--- a/src/styles/Historico.css
+++ b/src/styles/Historico.css
@@ -1,8 +1,14 @@
+.div-historico {    
+    background: rgba(255, 255, 255, 0.05);  
+    width: 600px;
+}
+
 table {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 13px;
     color: white;    
-    border-radius: 5px;    
+    border-radius: 5px;   
+    width: 100%; 
 }
 
 table td {
