--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,8 +1,13 @@
 .div-principal {    
-    width: 600px;
+    width: 600px;    
+}
+
+.div-options {
+  display:flex;    
 }
 
 .fancy-box {
+  box-sizing: border-box;
   display: inline-flex;
   align-items: center;
   background: rgba(255, 255, 255, 0.05);
@@ -13,6 +18,7 @@
   font-size: 50px;
   color: #fff;
   overflow: hidden;
+  width: 100%;      
 }
 
 .text {
@@ -38,7 +44,26 @@
 }
 
 .div-one {    
-    height: 200px;
+    height: 200px;        
+}
+
+.btn-options {
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 8px;
+    padding: 12px 24px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;    
+    height: 100%;    
+}
+
+.btn-options:hover {
+    background: rgba(255, 255, 255, 0.25);
+    transform: scale(1.05);
 }
 
 .whatsapp-btn {
@@ -52,8 +77,7 @@
     font-weight: bold;
     cursor: pointer;
     transition: all 0.3s ease;    
-    height: 100%;
-    width: 25%;
+    height: 100%;    
 }
 
 .whatsapp-btn:hover {
