fix: ajuste no style da div do  modal do qrcode

--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,5 +1,5 @@
 .div-principal {    
-    width: 600px;    
+    width: 600px;        
 }
 
 .div-options {
@@ -83,4 +83,16 @@
 .whatsapp-btn:hover {
     background: rgba(255, 255, 255, 0.25);
     transform: scale(1.05);
+}
+
+.div-modal-connection {              
+position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0,0,0,0.5); 
 }
